test/zinc_source/compile_errors/operators/12_comparison_returns_bool.zn
// expected-error: operator< must return bool

struct Point {
    x: i64

    fn operator<(left, right) -> i64 {
        return left.x
    }
}

fn main() {
    point = Point { x: 1 }
}
